# tempcode

./: README.md
Codes/cpp_solver/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
Codes/leap_motion/: czy_0214_x.csv  czy_0214_y.csv  czy_0214_z.csv  czy_0215_x2.csv  czy_0215_x3.csv  czy_0215_y2.csv  czy_0215_y3.csv  czy_0215_z2.csv  czy_0215_z3.csv  czy_0216_x.csv  czy_0216_x1.csv  czy_0216_y.csv  czy_0216_y1.csv  czy_0216_y2.csv  czy_0216_z.csv  czy_0216_z1.csv  czy_0502_x.csv  czy_0502_x2.csv  czy_0502_y.csv  czy_0502_y2.csv  czy_0502_z.csv  czy_0502_z2.csv  czy_0615_test.csv  czy_0615_x1_1.csv  czy_0615_x2_1.csv  czy_0615_x3_1.csv  czy_0615_x4_1.csv  czy_0615_x5_1.csv  czy_0615_x_1.csv  czy_0615_x_11.csv  czy_0615_y1_1.csv  czy_0615_y2_1.csv  czy_0615_y3_1.csv  czy_0615_y4_1.csv  czy_0615_y5_1.csv  czy_0615_y_1.csv  czy_0615_z1_1.csv  czy_0615_z2_1.csv  czy_0615_z3_1.csv  czy_0615_z4_1.csv  (+84 more)
Codes/optimization/: 0101_differential_mlp_model_v1.pth  0102_differential_mlp_model_v1.pth  0102_differential_mlp_model_v2.pth  0102_differential_mlp_model_v3.pth  0105_differential_mlp_model_v2.pth  0105mapping_net_model_v2.pth  0106_differential_mlp_model_v1_weighted.pth  0106_differential_mlp_model_v1_weighted_new.pth  0108_differential_mlp_model_v1.pth  0108_differential_mlp_model_v2.pth  0108_differential_mlp_model_v3.pth  0201androidmodelv1.pt  (+184 more)
cpp_solver/: CMakeLists.txt  setup.py
cpp_solver/src/: calcR.cpp  cpp_solver.cpp  cpp_solver_analytical.cpp  cpp_solver_analytical（复件）.cpp  ekf.cpp  ekf.h  test_eigen.cpp
cpp_solver/tests/: test.py
(+420 files in other folders)
